# SlicerSegmentWithSAM

./: .ruff.toml  CMakeLists.txt  README.md  setup.py
SegmentWithSAM/: CMakeLists.txt  SegmentWithSAM.py
SegmentWithSAM/Resources/UI/: SegmentWithSAM.ui
SegmentWithSAM/models/: cfg.py  implicitnet.py  sam_LST.py  sam_LoRa.py
SegmentWithSAM/models/sam/: build_sam.py  predictor.py
SegmentWithSAM/models/sam/modeling/: image_encoder.py  tiny_vit_sam.py  vit.py
sam2/: sam2_video_predictor.py
